# perfex

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs  utils.rs
src/document_reader/: pdf.rs
src/model/: mod.rs  model_handler.rs
src/providers/: gemini.rs  groq.rs  mod.rs  openai.rs
src/rag/: mod.rs  prompts.rs
src/vectordb/: lancedb.rs
