[package]
name = "perfex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
async-openai = "0.29.3"
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
gemini-rust = "1.5.0"
groqai = "0.1.10"
inquire = "0.9.1"
lancedb = "0.22.2"
shlex = "1.3.0"
tokio = { version = "1.47.1", features = ["full"] }
